# djup

./: .gitignore  CMakeLists.txt  README.md  commands.txt  test.sh
sources/core/: CMakeLists.txt
sources/core/private/: diagnostic.cpp  from_chars.cpp  graph_wiz.cpp  has_fp_charconv.h  name.cpp  sockets.cpp  system_utils.cpp  to_chars.cpp  to_string.cpp
sources/core/public/core/: address.h  algorithms.h  bits.h  diagnostic.h  flags.h  from_chars.h  graph_wiz.h  hash.h  hash_variant.h  immutable_vector.h  memory.h  name.h  numeric_cast.h  pointer_iterator.h  pool.h  pool.inl  queue.h  sockets.h  span.h  split.h  split.inl  system_utils.h  to_chars.h  to_string.h  traits.h
sources/core/tests/: test_algorithm.cpp  test_bits.cpp  test_core.cpp  test_from_chars.cpp  test_graph_wiz.cpp  test_immutable_vector.cpp  test_memory.cpp  test_pool.cpp  test_queue.cpp  test_split.cpp  test_system_utils.cpp  test_to_chars.cpp  test_to_string.cpp  test_traits.cpp  test_udp_socket.cpp
sources/core/vs2019/: core.vcxproj  core.vcxproj.filters
sources/core/vs2022/: core.vcxproj  core.vcxproj.filters
sources/djup/: CMakeLists.txt
sources/djup/private/: alphabet.h  builtin_names.h  common.h  constant_shape.cpp  constant_shape.h  diagnostic.h  discrimination_net.cpp  discrimination_net.h  discrimination_network.cpp  discrimination_network.h  domain.cpp  domain.h  expression.cpp  expression.h  expression_to_graph.cpp  expression_to_string.cpp  fixed_shape.cpp  fixed_shape.h  indices.cpp  indices.h  int_interval.cpp  int_interval.h  is.cpp  lexer.cpp  lexer.h  make_expr.cpp  make_expr.h  name.cpp  name.h  namespace.cpp  namespace.h  old_pattern_match.cpp  old_pattern_match.h  parser.cpp  parser.h  pattern_match.cpp  pattern_match.h  scalar_type.cpp  scalar_type.h  scope.cpp  (+17 more)
sources/djup/private/m2o_pattern/: candidate.cpp  candidate.h  debug_utils.cpp  discrimination_tree.cpp  discrimination_tree.h  m2o_candidate.cpp  m2o_candidate.h  m2o_debug_utils.cpp  m2o_debug_utils.h  m2o_discrimination_tree.cpp  m2o_discrimination_tree.h  m2o_pattern_info.cpp  m2o_pattern_info.h  m2o_substitution_graph.cpp  m2o_substitution_graph.h  m2o_substitution_graph_to_dot_language.cpp  m2o_substitution_match.cpp  m2o_substitutions_builder.cpp  pattern_info.h  substitution_graph.cpp  substitution_graph.h  substitution_graph_to_dot_language.cpp  substitution_match.cpp  substitutions_builder.cpp  substitutions_builder.h
sources/djup/private/o2o_pattern/: o2o_apply_substitutions.cpp  o2o_debug_utils.cpp  o2o_debug_utils.h  o2o_pattern_info.cpp  o2o_pattern_info.h  o2o_pattern_match.cpp  o2o_pattern_match.h  o2o_substitutions_builder.cpp  o2o_substitutions_builder.h  pattern_info.cpp
sources/djup/private/old_patt/pattern/pattern/: discrimination_net.cpp  discrimination_net.h  pattern_info.cpp  pattern_info.h  substitution_graph.cpp  substitution_graph.h
sources/djup/private/pattern/: ____substitution_graph.cpp  ____substitution_graph.h  candidate.cpp  candidate.h  debug_utils.cpp  debug_utils.h  discrimination_net.cpp  discrimination_net.h  discrimination_tree.cpp  discrimination_tree.h  old_substitution_graph.cpp  old_substitution_graph.h  pattern_info.cpp  pattern_info.h  substitution_graph.cpp  substitution_graph.h  substitution_graph_manipulation.cpp  substitution_graph_to_dot_language.cpp  substitution_match.cpp  substitutions_builder.cpp  substitutions_builder.h  util.cpp  utils.cpp  utils.h
sources/djup/private/pattern/original/: substitution_graph.cpp  substitution_graph.h
sources/djup/public/djup/: expression.h  name.h  tensor.h
sources/djup/tests/: test_core.cpp  test_discrimination_tree.cpp  test_djup.cpp  test_from_chars.cpp  test_lexer.cpp  test_m2o_discrimination_tree.cpp  test_m2o_pattern.cpp  test_m2o_pattern_info.cpp  test_m2o_substitutions_builder.cpp  test_o2o_pattern.cpp  test_old_pattern.cpp  test_parse.cpp  test_pattern.cpp  test_pattern_info.cpp  test_queue.cpp  test_split.cpp  test_substitutions_builder.cpp  test_tensor_to_graph.cpp  test_tensor_to_string.cpp  test_tensor_type.cpp  test_to_chars.cpp  test_to_string.cpp  test_traits.cpp  test_type.cpp  test_udp_socket.cpp  test_utils.cpp  test_utils.h
sources/djup/vs2019/: NatvisFile.natvis  djup.vcxproj  djup.vcxproj.filters
sources/djup/vs2022/: .editorconfig  NatvisFile.natvis  djup.vcxproj  djup.vcxproj.filters
sources/test/: CMakeLists.txt  main.cpp
sources/test/vs2019/: test.vcxproj
sources/test/vs2022/: test.vcxproj
vs2019/: djup.sln
vs2022/: djup.sln
